--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Helvetica', 'Helvetica Neue', sans-serif;
   background-color: #f3f3f3;
+  font-size: 1.6rem;
 }
